add third solution: fix header position, btns, x overflow

--- a/src/styles/blocks/_event.scss
+++ b/src/styles/blocks/_event.scss
@@ -114,6 +114,7 @@
       @include onDesktop {
         padding: 45px 0 23px;
         grid-column: 4/-4;
+        height: 0;
       }
     }
   }
@@ -178,10 +179,13 @@
       @include onTablet {
         padding-bottom: 50px;
         grid-column: 2/-2;
+        padding-left: 55px;
       }
 
       @include onDesktop {
         grid-column: 4/-4;
+        text-align: start;
+        padding-left: 100px;
       }
     }
   }
