--- a/src/styles/blocks/_icon.scss
+++ b/src/styles/blocks/_icon.scss
@@ -18,6 +18,7 @@
 
   &--arrow {
     background-image: url(../images/icons-logo/arrow.svg);
+    @include hover (transform, scale(1.7));
   }
 
   &--facebook {
@@ -33,6 +34,7 @@
     border: none;
     background-color: $accent-color;
     padding: 0;
+    @include hover (transform, scale(1.7));
   }
 
   &--arrow-up {
