--- a/src/styles/blocks/_subscription.scss
+++ b/src/styles/blocks/_subscription.scss
@@ -99,6 +99,9 @@
     height: 50px;
     justify-content: center;
     align-items: center;
+    border: none;
+    padding: 0;
+    cursor: pointer;
 
     @include onTablet {
       width: 70px;
