--- a/src/styles/blocks/header.scss
+++ b/src/styles/blocks/header.scss
@@ -3,6 +3,8 @@
   max-width: 1280px;
 
   &__content {
+    position: relative;
+
     @include onTablet {
       @include pageGrid;
     }
@@ -14,6 +16,7 @@
   }
 
   &__icons {
+    box-sizing: border-box;
     width: 100%;
     position: absolute;
     @include inlinePaddindControl;
@@ -39,7 +42,7 @@
   }
 
   &__logo-link {
-    padding-left: 88px;
+    margin: auto;
 
     @include onTablet {
       grid-column: 4/-2;
