--- a/src/styles/blocks/_bottom.scss
+++ b/src/styles/blocks/_bottom.scss
@@ -9,6 +9,7 @@
   gap: 20px;
   width: fit-content;
   @include inlinePaddindControl;
+  margin: 0 auto;
 
   @include onTablet {
     grid-column: 1/4;
