--- a/src/styles/blocks/_page.scss
+++ b/src/styles/blocks/_page.scss
@@ -5,7 +5,7 @@
   font-weight: $font-weight-madium;
   line-height: $line-hight-100;
   scroll-behavior: smooth;
-  background-color: $c-gray;
+  // background-color: $c-gray;
   transition: all $effect-duration;
   @include onBigDescktop;
   max-width: $desktop-max-width;
