Implement current-events section

--- a/src/styles/blocks/events-link.scss
+++ b/src/styles/blocks/events-link.scss
@@ -1,11 +1,11 @@
-.events {
+.events-link {
   display: none;
 
   font-family: IBM Plex Sans, sans-serif;
   font-size: 14px;
   font-weight: 700;
   line-height: 100%;
-  color: #687480;
+  color: $events-type-color;
 
   @include onDesktop {
     display: flex;
