--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -4,9 +4,18 @@
 
 @import "blocks/page";
 @import "blocks/container";
+
 @import "blocks/header";
 @import "blocks/tickets";
-@import "blocks/events";
+@import "blocks/events-link";
+
 @import "blocks/menu";
 @import "blocks/nav";
 @import "blocks/schedule";
+
+@import "blocks/main";
+@import "blocks/section-title";
+@import "blocks/current-events";
+@import "blocks/event";
+@import "blocks/description";
+@import "blocks/description-lection";
