--- a/src/styles/utils/_vars.scss
+++ b/src/styles/utils/_vars.scss
@@ -1,5 +1,6 @@
 $main-color: #0f0e08;
 $secondary-color: #1a5a4c;
+$events-type-color: #687480;
 
 $tablet-min-width: 640px;
 $desktop-min-width: 1280px;
