--- a/src/styles/blocks/header.scss
+++ b/src/styles/blocks/header.scss
@@ -1,23 +1,36 @@
 .header {
-  height: 300px;
-  background-image: url(../images/header-bg.png);
-  background-size: 100% 100%;
-
   font-family: Montserrat, sans-serif;
   font-size: 30px;
   font-weight: 700;
   text-align: center;
 
-  @include onTablet {
-    background-position: 50vw 0;
-    background-size: 50% 100%;
-    background-repeat: no-repeat;
+  &__background {
+    --container-paddings: -20px;
+    --out-of-box-width: calc(0px - var(--container-paddings));
+    position: absolute;
+    z-index: -1;
 
-    height: 384px;
-  }
+    margin-inline: var(--container-paddings);
+    width: calc(100% + 2 * var(--out-of-box-width));
+    height: 300px;
 
-  @include onDesktop {
-    height: 655px;
+    @include onTablet {
+      --container-paddings: -39px;
+
+      grid-column: 4 / 7;
+
+      width: calc(100% + var(--out-of-box-width));
+      margin-left: 0;
+      height: 384px;
+    }
+
+    @include onDesktop {
+      --container-paddings: -55px;
+
+      grid-column: 6 / 13;
+
+      height: 655px;
+    }
   }
 
   &__content {
@@ -64,7 +77,7 @@
     }
 
     @include onDesktop {
-      grid-column: 7 / 9;
+      grid-column: 6 / 8;
     }
   }
 
@@ -107,7 +120,7 @@
     }
   }
 
-  &__events {
+  &__events-link {
     position: absolute;
     align-self: end;
   }
