--- a/src/styles/blocks/menu.scss
+++ b/src/styles/blocks/menu.scss
@@ -76,7 +76,8 @@
     height: 100vh;
     width: 100%;
 
-    backdrop-filter: brightness(0.5);
+    background: #000;
+    opacity: 0.5;
 
     @include onTablet {
       margin-top: $tablet-menu-paddings;
