--- a/src/styles/blocks/page.scss
+++ b/src/styles/blocks/page.scss
@@ -23,4 +23,28 @@
       margin: 0 auto 200px;
     }
   }
+
+  &__actualy {
+    margin: 0 auto 50px;
+
+    @include onTablet {
+      margin: 0 auto 60px;
+    }
+
+    @include onDesktop {
+      margin: 0 auto 100px;
+    }
+  }
+
+  &__gallery {
+    margin: 0 auto 100px;
+
+    @include onTablet {
+      margin: 0 auto 92px;
+    }
+
+    @include onDesktop {
+      margin: 0 auto 200px;
+    }
+  }
 }
