--- a/src/styles/blocks/subscribe.scss
+++ b/src/styles/blocks/subscribe.scss
@@ -1,3 +1,59 @@
 .subscribe {
-  font-size: 16px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: 386px;
+  background-image: url(../../src/images/subsribe_mob.jpg);
+  background-size: cover;
+  background-position: center;
+
+  @include onTabletAndDesktop {
+    background-image: url(../../src/images/subsribe_tab.jpg);
+    height: 380px;
+  }
+
+  @include onDesktop {
+    background-image: url(../../src/images/subsribe.jpg);
+    height: 550px;
+  }
+
+  &__content {
+    color: $white;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+
+  &__title {
+    margin-bottom: 20px;
+    font-family: $montserrat;
+    font-size: 36px;
+    font-weight: 700;
+    line-height: 100%;
+
+    @include onTabletAndDesktop {
+      margin-bottom: 16px;
+      font-size: 48px;
+    }
+  }
+
+  &__description {
+    padding: 0 20px;
+    margin-bottom: 50px;
+    font-family: $ibm;
+    font-size: 18px;
+    text-align: center;
+    font-weight: 400;
+    line-height: 150%;
+
+    @include onTabletAndDesktop {
+      padding: 0;
+      margin-bottom: 64px;
+      line-height: 100%;
+    }
+
+    @include onDesktop {
+      margin-bottom: 72px;
+    }
+  }
 }
