--- a/src/styles/blocks/button.scss
+++ b/src/styles/blocks/button.scss
@@ -10,6 +10,20 @@
     padding: 0;
   }
 
+  &--subscribe {
+    max-width: max-content;
+    margin: 0;
+    padding: 0;
+
+    @include onTabletAndDesktop {
+      gap: 16px;
+    }
+
+    @include onDesktop {
+      gap: 30px;
+    }
+  }
+
   &__left {
     width: 100%;
     text-align: center;
@@ -21,6 +35,31 @@
     @include onTabletAndDesktop {
       width: 200px;
       line-height: 68px;
+    }
+
+    &--subscribe {
+      box-sizing: border-box;
+      border: none;
+      width: calc(100% - 50px);
+      outline: none;
+      // width: 230px;
+
+      color: #687480;
+      font-family: $montserrat;
+      font-size: 14px;
+      font-weight: 400;
+      line-height: 100%;
+      text-align: left;
+      padding: 0 24px;
+      
+      @include onTabletAndDesktop {
+        margin: 0;
+        width: 370px;
+      }
+
+      @include onDesktop {
+        width: 470px;
+      }
     }
   }
 
@@ -37,9 +76,21 @@
       width: 70px;
       height: 70px;
     }
-  }
   
-  &:hover &__right {
+    &--subscribe {
+      background-image: url(../images/arrow-black.svg);
+      background-color: $red;
+      border: none;
+      cursor: pointer;
+      transition: transform 0.3s;
+
+      &:hover {
+        transform: scale(110%);
+      }
+    }
+  }
+
+  &:hover &__right--header {
     width: 70px;
 
     @include onTabletAndDesktop {
