--- a/src/styles/blocks/header.scss
+++ b/src/styles/blocks/header.scss
@@ -1,5 +1,5 @@
 .header {
-  max-width: 1280px;
+  // max-width: 1280px;
   // margin: 0 auto;
   position: relative;
   display: flex;
@@ -25,7 +25,7 @@
 
     @include onDesktop {
       top: 45px;
-      left: 58px;
+      left: calc(55px + (100vw - 1280px) / 2);
     }
   }
 
@@ -33,34 +33,31 @@
     width: 100%;
   }
 
-  &__logo {
-    position: absolute;
-    top: 10px;
-    left: 50%;
-    transform: translateX(-50%);
-    width: 55px;
-    height: 61px;
-    font-family: $montserrat;
-    font-size: 30px;
-    font-weight: 700;
-    line-height: 30px;
-    text-align: center;
-    text-decoration: none;
-    color: $black;
-    @include hover(top, 20px);
+  // &__logo {
+  //   position: absolute;
+  //   top: 10px;
+  //   left: 50%;
+  //   transform: translateX(-50%);
+  //   width: 55px;
+  //   height: 61px;
+  //   font-family: $montserrat;
+  //   font-size: 30px;
+  //   font-weight: 700;
+  //   line-height: 30px;
+  //   text-align: center;
+  //   text-decoration: none;
+  //   color: $black;
+  //   @include hover(top, 20px);
 
-    @include onTabletAndDesktop {
-      top: 15px;
-      left: 60%;
-      width: 80px;
-      height: 72px;
-      font-size: 36px;
-    }
-
-    @include onDesktop {
-      left: 50%;
-    }
-  }
+  //   @include onTabletAndDesktop {
+  //     top: 15px;
+  //     left: 54%;
+  //     transform: translateX(0);
+  //     width: 80px;
+  //     height: 72px;
+  //     font-size: 36px;
+  //   }
+  // }
 
   &__image {
     display: block;
@@ -75,7 +72,9 @@
     }
 
     @include onDesktop {
-      width: 725px;
+      width: 50%;
+      height: 655px;
+      object-fit: cover;
     }
   }
 
@@ -129,7 +128,7 @@
       transform: rotate(-90deg);
       transform-origin: left top;
       position: absolute;
-      left: 55px;
+      left: calc(55px + (100vw - 1280px) / 2);
       bottom: 0;
       font-size: 14px;
       font-weight: 700;
