--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,6 +1,7 @@
 @import "utils";
 @import "typography";
 @import "./blocks/page.scss";
+@import "./blocks/logo.scss";
 @import "./blocks/header.scss";
 @import "./blocks/container.scss";
 @import "./blocks/button.scss";
