develop header for all screen (but do not fix problem with menu button)

--- a/src/styles/utils/_vars.scss
+++ b/src/styles/utils/_vars.scss
@@ -1,1 +1,21 @@
-$c-gray: #eee;
+//page
+$page-background-color: #fff;
+$page-text-color: #000;
+$page-title-color: #000;
+$page-main-color: #1a5a4c;
+
+//header
+$header-background-color: #fff;
+$header-text-color: #fff;
+
+//main-button
+$main-button-title-color: #0f0e08;
+$main-button-background-color: $page-main-color;
+
+//menu
+$menu-background-color:#fff;
+$menu-text-color: #fff;
+
+// Adapt the page
+$desktop-min-width: 1280px;
+$table-min-width: 768px;
