--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,7 +1,11 @@
 @import "utils";
-@import "fonts";
 @import "typography";
+@import "blocks/page";
+@import "blocks/container";
+@import "blocks/header";
+@import "blocks/art-museum";
+@import "blocks/button-main";
 
-body {
-  background: $c-gray;
+.body {
+  margin: 0;
 }
