--- a/src/styles/utils/_mixins.scss
+++ b/src/styles/utils/_mixins.scss
@@ -4,3 +4,47 @@
     #{$_property}: $_toValue;
   }
 }
+
+@mixin contentPaddingInline() {
+  padding-inline: 20px;
+
+  @include onTable {
+    padding-inline: 0;
+  }
+}
+
+@mixin Maintitle() {
+  font-family: "Montserrat", sans-serif;
+  color: $page-title-color;
+  line-height: 100%;
+  text-align: center;
+
+}
+
+@mixin onTable() {
+  @media (min-width:$table-min-width) {
+    @content;
+  }
+}
+
+@mixin onDesktop() {
+  @media (min-width:$desktop-min-width) {
+    @content;
+  }
+}
+
+@mixin pageGrid() {
+  @include onTable() {
+    display: grid;
+    column-gap: 30px;
+    grid-template-columns: repeat(6, 1fr);
+
+    margin-inline: 39px;
+  }
+
+  @include onDesktop() {
+    grid-template-columns: repeat(12, 1fr);
+
+    margin-inline: 55px;
+  }
+}
