--- a/src/styles/blocks/footer.scss
+++ b/src/styles/blocks/footer.scss
@@ -101,12 +101,15 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    font-size: 30px;
-    color: $black;
 
     @include onTabletAndDesktop {
       display: none;
     }
+  }
+
+  &__arrow-up-icon {
+    width: 16px;
+    height: 16px;
   }
 
   &__line {
