--- a/src/styles/blocks/galery.scss
+++ b/src/styles/blocks/galery.scss
@@ -1,6 +1,7 @@
 .gallery {
   font-size: 16px;
   overflow: hidden;
+  max-width: 1280px;
 
   @include onDesktop {
     overflow: visible;
@@ -37,6 +38,7 @@
     gap: 16px;
     margin-left: 20px;
     margin-bottom: 20px;
+    flex-basis: 100vw;
 
     @include onTablet {
       gap: 20px;
@@ -52,13 +54,13 @@
   }
 
   &__image {
-    width: 280px;
-    height: 410px;
+    width: calc(100vw - 44px);
+    height: calc((100vw - 44px) * 1.6);
     object-fit: cover;
 
     @include onTablet {
-      width: 340px;
-      height: 543px;
+      width: calc(100vw / 2 - 46px);
+      height: calc((100vw / 2 - 46px) * 1.6);
     }
 
     @include onDesktop {
