--- a/src/styles/blocks/header.scss
+++ b/src/styles/blocks/header.scss
@@ -128,7 +128,7 @@
       transform: rotate(-90deg);
       transform-origin: left top;
       position: absolute;
-      left: calc(55px + (100vw - 1280px) / 2);
+      left: calc(55px - 1em + (100vw - 1280px) / 2);
       bottom: 0;
       font-size: 14px;
       font-weight: 700;
