--- a/src/styles/blocks/page.scss
+++ b/src/styles/blocks/page.scss
@@ -5,7 +5,7 @@
     margin: 0;
     font-family: $ibm;
     color: $black;
-    background: $bgc-gray;
+    background: $white;
 
     &--with-menu {
       overflow: hidden;
