--- a/src/styles/blocks/actualy.scss
+++ b/src/styles/blocks/actualy.scss
@@ -176,7 +176,7 @@
     width: calc(100% - 40px);
     margin: 0 20px;
     padding: 20px 0;
-    background-color: $bgc-gray;
+    background-color: $white;
     transform: translateY(-50%);
     border-bottom: 3px solid $title-gray;
 
