--- a/src/styles/blocks/footer.scss
+++ b/src/styles/blocks/footer.scss
@@ -96,7 +96,7 @@
     width: 50px;
     height: 50px;
     border-radius: 50%;
-    border: 1px solid $black;
+    border: 1px solid $green;
     justify-self: end;
     display: flex;
     justify-content: center;
