--- a/src/styles/utils/_vars.scss
+++ b/src/styles/utils/_vars.scss
@@ -1,1 +1,9 @@
-$c-gray: #eee;
+$tablet-min-width: 576px;
+$desktop-min-width: 1024px;
+$main-font-family: "IBM Plex Sans", "Arial", sans-serif;
+$second-font-family: "Montserrat", "Arial", sans-serif;
+$main-text-color: #0f0e08;
+$green-color: #1a5a4c;
+$white-color: #fff;
+$gray-color: #687480;
+$red-color: #f14a27;
