fix problem with menu-button

--- a/src/styles/blocks/art-museum.scss
+++ b/src/styles/blocks/art-museum.scss
@@ -40,8 +40,23 @@
     }
   }
 
+  &__button-menu {
+    display: none;
+
+    @include onTable() {
+      display: block;
+
+      position: absolute;
+      top: 40px;
+    }
+  }
+
   &__title {
-    @include Maintitle();
+    font-family: "Montserrat", sans-serif;
+    color: $page-title-color;
+
+    line-height: 100%;
+    text-align: center;
     font-size: 45px;
     text-transform: uppercase;
 
