--- a/src/styles/blocks/header.scss
+++ b/src/styles/blocks/header.scss
@@ -36,16 +36,15 @@
     }
   }
 
+  &__art-museum {
+    position: relative;
+  }
+
   &__button-menu {
     position: absolute;
 
-    width: 24px;
-    height: 24px;
-
-    background-image: url(../images/icons/icon-menu.png);
-
     @include onTable() {
-      right: 0;
+      display: none;
     }
   }
 
