--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -4,7 +4,7 @@
 @import "blocks/container";
 @import "blocks/header";
 @import "blocks/art-museum";
-@import "blocks/button-main";
+@import "blocks/button";
 
 .body {
   margin: 0;
