My first solution

--- a/src/styles/utils/_vars.scss
+++ b/src/styles/utils/_vars.scss
@@ -1,1 +1,13 @@
 $c-gray: #eee;
+$main-text-color: #ffffff;
+$tablet-min-width: 640px;
+$desktop-min-width: 1280px;
+$effectDuration: 0.3s;
+$menu-background-color: #1a5a4c;
+$placeholder-color: #0f0e08;
+$grey-color: #687480;
+$another-grey-color: #4e4e4e;
+$ellipse-color: #e0e0e0;
+$red-color: #f14a27;
+
+
