--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,7 +1,14 @@
 @import "utils";
-@import "fonts";
-@import "typography";
-
-body {
-  background: $c-gray;
-}
+@import "./blocks/page.scss";
+@import "./blocks/icons.scss";
+@import "./blocks/top-bar.scss";
+@import "./blocks/menu.scss";
+@import "./blocks/nav.scss";
+@import "./blocks/header.scss";
+@import "./blocks/dark-theme.scss";
+@import "./blocks/main.scss";
+@import "./blocks/events.scss";
+@import "./blocks/section-title.scss";
+@import "./blocks/gallery.scss";
+@import "./blocks/contacts.scss";
+@import "./blocks/subscription.scss";
