My second commit

--- a/src/styles/blocks/events.scss
+++ b/src/styles/blocks/events.scss
@@ -10,6 +10,7 @@
     position: relative;
     background-image: url(../images/third-gallery-picture-tablet.png);
     background-repeat: no-repeat;
+    @include hover(transform, scale(1.03));
 
     @include onTablet {
       height: 390px;
@@ -36,6 +37,7 @@
 
   &__photo {
     width: 100%;
+    @include hover(transform, scale(1.03));
 
     &-another {
       width: 100%;
