--- a/src/styles/blocks/gallery.scss
+++ b/src/styles/blocks/gallery.scss
@@ -35,6 +35,7 @@
   &__picture {
     width: 100%;
     display: block;
+    @include hover(transform, scale(1.03));
 
     &--first-tablet {
       margin-top: 40px;
