--- a/src/styles/blocks/header.scss
+++ b/src/styles/blocks/header.scss
@@ -87,6 +87,7 @@
       border: none;
       color: #d7dde3;
       font-size: 20px;
+      @include hover(transform, scale(1.2));
 
       @include onTablet {
         width: 70px;
