--- a/src/styles/blocks/subscription.scss
+++ b/src/styles/blocks/subscription.scss
@@ -95,6 +95,7 @@
       height: 50px;
       border: none;
       font-size: 20px;
+      @include hover(transform, scale(1.2));
 
       @include onTablet {
         width: 70px;
