--- a/src/styles/blocks/events.scss
+++ b/src/styles/blocks/events.scss
@@ -25,7 +25,7 @@
 
   @include onTablet {
     row-gap: 64px;
-    grid-template-columns: 700px;
+    grid-template-columns: 1fr;
   }
 
   @include onDesktop {
