--- a/src/styles/blocks/subscription.scss
+++ b/src/styles/blocks/subscription.scss
@@ -64,6 +64,12 @@
       width: 83%;
       height: 50px;
       transform: translateY(-3px);
+      @include fontMontserrat;
+      color: $grey-color;
+      font-size: 16px;
+      line-height: 16px;
+      font-weight: 400;
+      padding: 18px 24px;
 
       @include onTablet {
         width: 374px;
@@ -86,6 +92,7 @@
     }
 
     &-submit {
+      cursor: pointer;
       padding: 0;
       margin: 0;
       margin-left: -4px;
@@ -96,6 +103,7 @@
       border: none;
       font-size: 20px;
       @include hover(transform, scale(1.2));
+      transform: translateY(-1%);
 
       @include onTablet {
         width: 70px;
