--- a/src/styles/blocks/header.scss
+++ b/src/styles/blocks/header.scss
@@ -60,6 +60,12 @@
       width: 83%;
       height: 50px;
       transform: translateY(-2px);
+      font-family: 'IBM Plex Sans', Arial, sans-serif;
+      color: $placeholder-color;
+      font-size: 16px;
+      line-height: 16px;
+      font-weight: 500;
+      text-align: center;
 
       @include onTablet {
         width: 200px;
@@ -77,6 +83,7 @@
     }
 
     &-submit {
+      cursor: pointer;
       padding: 0;
       margin: 0;
       margin-left: -4px;
@@ -88,6 +95,7 @@
       color: #d7dde3;
       font-size: 20px;
       @include hover(transform, scale(1.2));
+      transform: translateY(-1%);
 
       @include onTablet {
         width: 70px;
