--- a/src/styles/blocks/art-museum.scss
+++ b/src/styles/blocks/art-museum.scss
@@ -11,32 +11,13 @@
 
       padding-block: 0;
 
-      &::before {
-        content: "";
-        display: block;
-        padding-top: 45%;
-      }
-
-      &::after {
-        content: "";
-        display: block;
-        padding-top: 15%;
-      }
+      @include stretchElement(45%, 15%);
     }
 
     @include onDesktop() {
       grid-column: span 5;
-      &::after {
-        content: "";
-        display: block;
-        padding-top: 50%;
-      }
 
-      &::before {
-        content: "";
-        display: block;
-        padding-top: 50%;
-      }
+      @include stretchElement(50%, 50%);
     }
   }
 
@@ -72,6 +53,15 @@
       margin: 0;
       width: 100%;
       padding-bottom: 40px;
+    }
+  }
+
+  &__button {
+    max-width: 450px;
+    margin: 0 auto;
+
+    @include onTable() {
+      margin: 0;
     }
   }
 }
