--- a/src/styles/blocks/footer.scss
+++ b/src/styles/blocks/footer.scss
@@ -99,19 +99,8 @@
 
     @include hover(background-color, #aea6a6);
 
-    // &::before {
-    //   color: $green-color;
-    // }
-
-    // &:hover {
-    //   background-color: $green-color;
-    //   &::before {
-    //     color: $white-color;
-    //   }
-    // }
-
     @include onTablet {
-      // display: none;
+      display: none;
     }
   }
 
