--- a/src/styles/blocks/gallery.scss
+++ b/src/styles/blocks/gallery.scss
@@ -3,7 +3,7 @@
     margin-bottom: 40px;
 
     @include onTablet {
-      text-align-last: left;
+      text-align: left;
       margin-bottom: 48px;
     }
 
