--- a/src/styles/blocks/menu.scss
+++ b/src/styles/blocks/menu.scss
@@ -1,5 +1,4 @@
 .menu {
-  height: 70vh;
   overflow: auto;
   padding-block: 27px;
   font-size: 14px;
@@ -8,8 +7,11 @@
   background-color: $green-color;
 
   @include onTablet {
+    padding-bottom: 48px;
+  }
+
+  @include onTablet {
     padding-block: 40px;
-    height: 50vh;
   }
 
   &__content {
