made header and pasrt of the event section

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,117 +1,13 @@
 @import "utils";
 @import "fonts";
 @import "typography";
-
-.page {
-  &__body {
-    margin: 0;
-  }
-
-  &__menu {
-    position: fixed;
-    top: 0;
-    left: 0;
-    right: 0;
-    padding: 27px 20px;
-
-    opacity: 0;
-    pointer-events: none;
-
-    &:target {
-      opacity: 1;
-      pointer-events: all;
-    }
-  }
-}
-
-.header {
-  position: relative;
-  box-sizing: border-box;
-  height: 100vh;
-
-  display: flex;
-  flex-direction: column;
-  gap: 20px;
-
-  &__image {
-    height: 50vh;
-  }
-
-
-  &__logo {
-    display: block;
-    position: absolute;
-    left: 45%;
-    top: 10px;
-    width: 55px;
-    height: 61px;
-  }
-
-  &__title {
-    margin-inline: 20px;
-    font-family:  'Montserrat', sans-serif;
-    font-weight: 700;
-    line-height: 100%;
-    font-size: 45px;
-    text-align: center;
-  }
-
-  &__tickets-link {
-    display: flex;
-    box-sizing: border-box;
-    margin-inline: 20px;
-    position: relative;
-    width: fit-content;
-    height: 50px;
-
-    text-decoration: none;
-    color: #0f0e08;
-    font-family: 'IBM Plex Sans', sans-serif;
-    font-size: 16px;
-    font-weight: 500;
-    line-height: 100%;
-    padding: 18px 80px;
-
-
-    border: 1px solid #1a5a4c;
-    &::after {
-      position: absolute;
-      content: '';
-      background-color: #1a5a4c;
-      width: 50px;
-      height: 50px;
-      top: -1px;
-      right: -51px;
-    }
-  }
-}
-
-.menu {
-  box-sizing: border-box;
-  height: fit-content;
-  background-color: #1a5a4c;
-  overflow: auto;
-  padding: 27px 20px;
-}
-
-.icon {
-  position: absolute;
-  display: block;
-  background-size: cover;
-  height: 24px;
-  width: 24px;
-  transition: all 500ms;
-
-  &:hover {
-    transform: scale(120%);
-  }
-
-  &--menu {
-    margin: 27px 20px;
-    background-image: url(../images/icons/menu.svg);
-  }
-
-  &--close {
-    background-image: url(../images/icons/close.svg);
-  }
-}
+@import "blocks/page.scss";
+@import "blocks/header.scss";
+@import "blocks/menu.scss";
+@import "blocks/nav.scss";
+@import "blocks/icon.scss";
+@import "blocks/info.scss";
+@import "blocks/section.scss";
+@import "blocks/event.scss";
+@import "blocks/exhibition.scss";
+@import "blocks/lecture.scss";
