--- a/src/styles/utils/_vars.scss
+++ b/src/styles/utils/_vars.scss
@@ -1,1 +1,11 @@
-$c-gray: #eee;
+$tablet-min-width: 576px;
+$desktop-min-width: 1024px;
+
+
+
+$main-title-color: #0f0e08;
+$secondary-title-color: #687480;
+$main-text-color: #4e4e4e;
+$background-color: #1a5a4c;
+$rectangle-color: #f14a27;
+
