develop block current-events

--- a/src/styles/blocks/page.scss
+++ b/src/styles/blocks/page.scss
@@ -8,6 +8,14 @@
 
   &__header {
     position: relative;
+
+    @include onTable() {
+      margin-bottom: 90px;
+    }
+
+    @include onDesktop() {
+      margin-bottom: 200px;
+    }
   }
 
   &__menu {
