--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -4,7 +4,15 @@
 @import "blocks/container";
 @import "blocks/header";
 @import "blocks/art-museum";
+@import "blocks/main";
 @import "blocks/button";
+@import "blocks/section";
+@import "blocks/current-events";
+@import "blocks/article";
+@import "blocks/event-description";
+// @import "blocks/i-go-and-come-back";
+// @import "blocks/and-memories-and-dreams";
+@import "blocks/from-classicism-to-romanticism";
 
 .body {
   margin: 0;
