--- a/src/styles/utils/_vars.scss
+++ b/src/styles/utils/_vars.scss
@@ -8,13 +8,28 @@ $page-main-color: #1a5a4c;
 $header-background-color: #fff;
 $header-text-color: #fff;
 
+//menu
+$menu-background-color:#fff;
+$menu-text-color: #fff;
+
 //main-button
 $main-button-title-color: #0f0e08;
 $main-button-background-color: $page-main-color;
 
-//menu
-$menu-background-color:#fff;
-$menu-text-color: #fff;
+//section
+$section-title-color: #0f0e08;
+
+//article
+$article-title-color: #0f0e08;
+$article-decoration-title-color: #f14a27;
+$article-text-color: #4e4e4e;
+
+//event-description
+$event-description-name-color: #687480;
+$event-description-date-color: #1a5a4c;
+
+//from-classicism-to-romanticism
+$from-classicism-to-romanticism-background-color: #fff;
 
 // Adapt the page
 $desktop-min-width: 1280px;
