fix a few problems

--- a/src/styles/blocks/current-events.scss
+++ b/src/styles/blocks/current-events.scss
@@ -1,12 +1,6 @@
 .current-events {
   &__title {
-    @include onTable() {
-      padding-left: 32px;
-    }
-
-    @include onDesktop() {
-      padding-left: 55px;
-    }
+    @include contentPaddingInline();
   }
 
   &__cards {
