--- a/src/styles/utils/_mixins.scss
+++ b/src/styles/utils/_mixins.scss
@@ -9,7 +9,11 @@
   padding-inline: 20px;
 
   @include onTable {
-    padding-inline: 0;
+    padding-inline: 39px;
+  }
+
+  @include onDesktop() {
+    padding-inline: 55px;
   }
 }
 
@@ -55,13 +59,9 @@
     display: grid;
     column-gap: 30px;
     grid-template-columns: repeat(6, 1fr);
-
-    margin-inline: 39px;
   }
 
   @include onDesktop() {
     grid-template-columns: repeat(12, 1fr);
-
-    margin-inline: 55px;
   }
 }
