--- a/src/styles/blocks/from-classicism-to-romanticism.scss
+++ b/src/styles/blocks/from-classicism-to-romanticism.scss
@@ -11,7 +11,7 @@
     background-image: url(../images/backgrounds/from-classicism-to-romanticism--table.png);
 
     height: 390px;
-    margin-bottom: 85px;
+    margin-bottom: 120px;
   }
 
   @include onDesktop {
@@ -28,7 +28,7 @@
     transform: translate(-50%);
 
     background-color: $from-classicism-to-romanticism-background-color;
-    box-shadow: 02px 0 0 rgba(26, 90, 76, 0.25);
+    box-shadow: 0 2px 0 rgba(26, 90, 76, 0.25);
 
     display: flex;
     flex-direction: column;
