develop block subscribe

--- a/src/styles/blocks/art-museum.scss
+++ b/src/styles/blocks/art-museum.scss
@@ -34,7 +34,7 @@
 
   &__title {
     font-family: "Montserrat", sans-serif;
-    color: $page-title-color;
+    color: $art-museum-title-color;
 
     line-height: 100%;
     text-align: center;
@@ -57,11 +57,34 @@
   }
 
   &__button {
+    display: flex;
+    align-items: center;
+
     max-width: 450px;
     margin: 0 auto;
 
     @include onTable() {
       margin: 0;
+    }
+  }
+
+  &__label {
+    flex-grow: 1;
+
+    color: $art-museum-label-color;
+    font-weight: 500;
+    text-transform: uppercase;
+    line-height: 100%;
+    text-align: center;
+
+    border: 1px solid $page-main-color;
+
+    padding-block: 16px;
+
+    @include onTable() {
+      padding-block: 26px;
+      flex-grow: 0;
+      flex-basis: 60%;
     }
   }
 }
