--- a/src/styles/blocks/button.scss
+++ b/src/styles/blocks/button.scss
@@ -1,42 +1,21 @@
-.button-main {
-  display: flex;
-  align-items: center;
+.button-arrow {
+  flex-grow: 0;
 
-  &__title {
-    flex-grow: 1;
+  background-image: url(../images/icons/icon-arrow.svg);
+  background-color: $button-arrow-background-color;
+  background-position: center;
+  background-repeat: no-repeat;
 
-    color: $main-button-title-color;
-    font-weight: 500;
-    text-transform: uppercase;
-    line-height: 100%;
-    text-align: center;
+  width: 50px;
+  height: 50px;
 
-    border: 1px solid $main-button-title-color;
-
-    padding-block: 16px;
-
-    @include onTable() {
-      padding-block: 26px;
-      flex-grow: 0;
-      flex-basis: 60%;
-    }
+  @include onTable() {
+    width: 70px;
+    height: 70px;
   }
 
-  &__arrow {
-    flex-grow: 0;
-
-    background-image: url(../images/icons/icon-arrow.svg);
-    background-color: $main-button-background-color;
-    background-position: center;
-    background-repeat: no-repeat;
-
-    width: 50px;
-    height: 50px;
-
-    @include onTable() {
-      width: 70px;
-      height: 70px;
-    }
+  &--second-color {
+    background-color: $button-arrow-background-color-second-color;
   }
 }
 
