--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -13,6 +13,8 @@
 // @import "blocks/i-go-and-come-back";
 // @import "blocks/and-memories-and-dreams";
 @import "blocks/from-classicism-to-romanticism";
+@import "blocks/gallery";
+@import "blocks/subscribe";
 
 .body {
   margin: 0;
