--- a/src/styles/utils/_vars.scss
+++ b/src/styles/utils/_vars.scss
@@ -1,35 +1,43 @@
 //page
 $page-background-color: #fff;
-$page-text-color: #000;
-$page-title-color: #000;
 $page-main-color: #1a5a4c;
+$page-second-color: #f14a27;
 
 //header
 $header-background-color: #fff;
 $header-text-color: #fff;
 
+//art-museum
+$art-museum-label-color: #0f0e08;
+$art-museum-title-color: #000;
+
 //menu
 $menu-background-color:#fff;
 $menu-text-color: #fff;
 
-//main-button
-$main-button-title-color: #0f0e08;
-$main-button-background-color: $page-main-color;
+//button-arrow
+$button-arrow-background-color: $page-main-color;
+$button-arrow-background-color-second-color: $page-second-color;
 
 //section
 $section-title-color: #0f0e08;
 
 //article
 $article-title-color: #0f0e08;
-$article-decoration-title-color: #f14a27;
+$article-decoration-title-color: $page-second-color;
 $article-text-color: #4e4e4e;
 
 //event-description
 $event-description-name-color: #687480;
-$event-description-date-color: #1a5a4c;
+$event-description-date-color: $page-main-color;
 
 //from-classicism-to-romanticism
 $from-classicism-to-romanticism-background-color: #fff;
+
+//subscribe
+$subscribe-title-color: #fff;
+$subscribe-text-color: #fff;
+$subscribe-input-color: #687480;
 
 // Adapt the page
 $desktop-min-width: 1280px;
