Sort out last solution

--- a/src/styles/blocks/contacts.scss
+++ b/src/styles/blocks/contacts.scss
@@ -38,7 +38,6 @@
 
     @include onDesktop {
       column-gap: 3 / 5;
-      margin-left: 40px;
     }
 
     &-title {
@@ -59,7 +58,7 @@
       font-size: 14px;
       line-height: 21px;
       font-weight: 600;
-      width: 200px;
+      width: 155px;
       color: $placeholder-color;
     }
 
@@ -74,6 +73,13 @@
     font-weight: 400;
     font-size: 14px;
     line-height: 21px;
+    margin: 0;
+    margin-top: 50px;
+    margin-bottom: 20px;
+
+    @include onTablet {
+      margin-top: 30px;
+    }
 
     &--hover {
       @include hover(transform, scale(1.2));
@@ -86,12 +92,11 @@
     height: 50px;
     border-radius: 50%;
     border: 1px solid $menu-background-color;
+    transform: translateX(420%);
 
     display: flex;
     justify-content: center;
     align-items: center;
-
-    transform: translateX(800%);
 
     &:hover {
       background-color: $menu-background-color;
@@ -115,7 +120,6 @@
   }
 
   &__contacts {
-    margin-left: -15px;
     grid-column: 2 / 3;
 
     @include onTablet {
@@ -130,6 +134,15 @@
       display: flex;
       flex-direction: column;
       gap: 5px;
+
+      &-link {
+        text-decoration: none;
+        color: $placeholder-color;
+        font-weight: 400;
+        font-size: 14px;
+        line-height: 21px;
+        margin: 0;
+      }
     }
   }
 
