Sort out last solution

--- a/src/styles/blocks/contacts.scss
+++ b/src/styles/blocks/contacts.scss
@@ -30,14 +30,8 @@
   }
 
   &__working-schedule {
-    column-gap: 1 / 2;
-
     @include onTablet {
-      column-gap: 2 / 4;
-    }
-
-    @include onDesktop {
-      column-gap: 3 / 5;
+      transform: translateX(30%);
     }
 
     &-title {
