--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,7 +1,11 @@
-@import "utils";
-@import "fonts";
-@import "typography";
+@import "../styles/utils/reset";
+@import "../styles/utils/mixins";
+@import "../styles/utils/vars";
+@import "../styles/utils/utility";
 
-body {
-  background: $c-gray;
-}
+@import "../styles/header.scss";
+@import "../styles/page.scss";
+@import "../styles/events.scss";
+@import "../styles/gallery.scss";
+@import "../styles/subscription.scss";
+@import "../styles/footer.scss";
