add task solution

--- a/src/styles/utils/_extends.scss
+++ b/src/styles/utils/_extends.scss
@@ -1,4 +1,31 @@
 %h1 {
-  font-family: "Roboto", sans-serif;
-  font-weight: 400;
+  font-weight: 700;
+  font-size: 45px;
+  line-height: 1em;
+  color: #000;
+  text-align: center;
+  text-transform: uppercase;
+
+  @include onTablet {
+    font-size: 54px;
+    line-height: 1.2em;
+    text-align: left;
+  }
+
+  @include onDesktop {
+    font-size: 72px;
+  }
+}
+
+%h2 {
+  font-weight: 700;
+  font-size: 36px;
+  line-height: 1em;
+  color: #0f0e08;
+  text-align: center;
+
+  @include onTablet {
+    font-size: 48px;
+    text-align: left;
+  }
 }
