--- a/src/styles/_utils.scss
+++ b/src/styles/_utils.scss
@@ -1,3 +1,5 @@
-@import "utils/vars";
+@import "utils/normalize";
+@import "utils/variables";
 @import "utils/mixins";
 @import "utils/extends";
+@import "utils/typography";
