--- a/src/styles/blocks/button.scss
+++ b/src/styles/blocks/button.scss
@@ -24,4 +24,12 @@
   height: 24px;
 
   background-image: url(../images/icons/icon-menu.png);
+
+}
+
+.button-close {
+  width: 24px;
+  height: 24px;
+
+  background-image: url(../images/icons/icon-menu-close.png);
 }
