--- a/src/styles/utils/_vars.scss
+++ b/src/styles/utils/_vars.scss
@@ -7,13 +7,13 @@ $page-second-color: #f14a27;
 $header-background-color: #fff;
 $header-text-color: #fff;
 
+//menu
+$menu-background-color: $page-main-color;
+$menu-text-color: #fff;
+
 //art-museum
 $art-museum-label-color: #0f0e08;
 $art-museum-title-color: #000;
-
-//menu
-$menu-background-color:#fff;
-$menu-text-color: #fff;
 
 //button-arrow
 $button-arrow-background-color: $page-main-color;
