--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -3,6 +3,9 @@
 @import "blocks/page";
 @import "blocks/container";
 @import "blocks/header";
+@import "blocks/menu";
+@import "blocks/nav";
+@import "blocks/schedulee";
 @import "blocks/art-museum";
 @import "blocks/main";
 @import "blocks/button";
