add link to contacts section and scale on logo hover

--- a/src/styles/blocks/layouts/header.scss
+++ b/src/styles/blocks/layouts/header.scss
@@ -48,6 +48,10 @@
     display: block;
     width: 100%;
     height: 100%;
+
+    @include onDesktop {
+      @include hover(scale, 1.25);
+    }
   }
 
   &__image-container {
