--- a/src/styles/blocks/layouts/footer.scss
+++ b/src/styles/blocks/layouts/footer.scss
@@ -38,6 +38,10 @@
     display: block;
     width: 100%;
     height: 100%;
+
+    @include onDesktop {
+      @include hover(scale, 1.25);
+    }
   }
 
   &__social-icons {
