--- a/src/styles/blocks/sections/subscription-form.scss
+++ b/src/styles/blocks/sections/subscription-form.scss
@@ -13,6 +13,18 @@
     gap: 30px;
   }
 
+  &__label {
+    position: absolute;
+    width: 1px;
+    height: 1px;
+    padding: 0;
+    margin: -1px;
+    overflow: hidden;
+    clip: rect(0, 0, 0, 0);
+    white-space: nowrap;
+    border-width: 0;
+  }
+
   &__input {
     flex-grow: 1;
     height: 100%;
