Solution on Footer and Subscription section

--- a/src/styles/blocks/icon.scss
+++ b/src/styles/blocks/icon.scss
@@ -13,4 +13,16 @@
   &--close {
     background-image: url("../images/icons/icon-menu-close.svg");
   }
+
+  &--logo {
+    color: $primary-700;
+    font-family: "Montserrat", "Arial", sans-serif;
+    font-weight: 700;
+    font-size: 30px;
+    line-height: 100%;
+
+    @include onTablet {
+      font-size: 36px;
+    }
+  }
 }
