--- a/src/styles/utils/_mixins.scss
+++ b/src/styles/utils/_mixins.scss
@@ -25,8 +25,6 @@
   }
 
   @include onDesktop {
-    max-width: 1170px;
-    margin-inline: auto;
     padding-inline: 55px;
   }
 }
@@ -34,6 +32,9 @@
 .container {
   @include contentPaddingInline;
   box-sizing: content-box;
+  max-width: 1170px;
+  margin: 0 auto;
+  padding: 0 20px;
 }
 
 @mixin pageGrid {
