--- a/src/styles/_blocks.scss
+++ b/src/styles/_blocks.scss
@@ -3,7 +3,13 @@
 @import "blocks/top-bar";
 @import "blocks/icon";
 @import "blocks/menu";
+@import "blocks/shedule";
 @import "blocks/nav";
 @import "blocks/main";
 @import "blocks/section-title";
 @import "blocks/events";
+@import "blocks/gallery";
+@import "blocks/subscription";
+@import "blocks/footer";
+@import "blocks/social";
+@import "blocks/contact";
