--- a/src/styles/blocks/page.scss
+++ b/src/styles/blocks/page.scss
@@ -24,6 +24,7 @@
     pointer-events: none;
 
     &:target {
+      z-index: 2;
       opacity: 1;
       transform: translateY(0);
       pointer-events: all;
