--- a/src/styles/reset/_forms.scss
+++ b/src/styles/reset/_forms.scss
@@ -1,91 +1,4 @@
-input[type="text"],
-input[type="password"],
-input[type="email"],
-input[type="url"],
-input[type="date"],
-input[type="month"],
-input[type="time"],
-input[type="datetime"],
-input[type="datetime-local"],
-input[type="week"],
-input[type="number"],
-input[type="search"],
-input[type="tel"],
-select,
-textarea {
-  background: $white;
-  background-clip: padding-box;
-  border: $border;
-  border-radius: $br;
-  color: $text;
-  display: block;
-  width: 100%;
-  font-size: 1rem;
-  padding: $sm-pad $md-pad;
-  line-height: 1.5;
-  transition: border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
-  font-family: #{$sans-serif};
-  word-break: normal;
-}
-
-select {
-  border: $border;
-  vertical-align: sub;
-}
-
-textarea {
-  overflow: auto;
-  resize: vertical;
-  margin: 0;
-}
-
-input[type="color"] {
-  background-color: $white;
-  border: $border;
-  border-radius: $br;
-  display: inline-block;
-  vertical-align: middle;
-}
-
-input:not([type]) {
-  -webkit-appearance: none;
-  background: $white;
-  background-clip: padding-box;
-  border: $border;
-  border-radius: $br;
-  color: $text;
-  display: block;
-  width: 100%;
-  padding: $sm-pad $md-pad;
-  line-height: 1.5;
-  transition: border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
-  text-align: left;
-  word-break: normal;
-}
-
-input[type="text"]:focus,
-input[type="password"]:focus,
-input[type="email"]:focus,
-input[type="url"]:focus,
-input[type="date"]:focus,
-input[type="month"]:focus,
-input[type="time"]:focus,
-input[type="datetime"]:focus,
-input[type="datetime-local"]:focus,
-input[type="week"]:focus,
-input[type="number"]:focus,
-input[type="search"]:focus,
-input[type="tel"]:focus,
-input[type="color"]:focus,
-select:focus,
-textarea:focus {
-  background-color: $white;
-  border-color: $primary-400;
-  outline: 0;
-  box-shadow: 0 0 0 0.2rem rgba(59, 130, 246, 0.5);
-}
-
-input:not([type]):focus {
+input[type="email"]:focus, {
   background-color: $white;
   border-color: $primary-400;
   outline: 0;
@@ -105,40 +18,11 @@ input[type="checkbox"]:focus {
   outline: 1px solid $dividers;
 }
 
-input[type="text"][disabled],
-input[type="password"][disabled],
-input[type="email"][disabled],
-input[type="url"][disabled],
-input[type="date"][disabled],
-input[type="month"][disabled],
-input[type="time"][disabled],
-input[type="datetime"][disabled],
-input[type="datetime-local"][disabled],
-input[type="week"][disabled],
-input[type="number"][disabled],
-input[type="search"][disabled],
-input[type="tel"][disabled],
-input[type="color"][disabled],
-select[disabled],
-textarea[disabled] {
+input[type="email"][disabled] {
   background-color: $dividers;
   color: $secondary;
   cursor: not-allowed;
   opacity: 1;
-}
-
-input:not([type])[disabled] {
-  background-color: $dividers;
-  color: $secondary;
-  cursor: not-allowed;
-  opacity: 1;
-}
-
-input[readonly],
-select[readonly],
-textarea[readonly] {
-  border-color: $dividers;
-  color: $secondary;
 }
 
 input:focus:invalid,
@@ -154,30 +38,7 @@ input[type="checkbox"]:focus:invalid:focus {
   outline-color: $red;
 }
 
-select:not([size]):not([multiple]) {
-  height: calc(2.25rem + 2px);
-}
-
-select[multiple] {
-  height: auto;
-}
-
 label {
   display: inline-block;
   line-height: 2;
-}
-
-fieldset {
-  margin: 0;
-  padding: $sm-pad 0;
-  border: 1px solid #a0a0a0;
-}
-
-legend {
-  border-bottom: $border;
-  color: $text;
-  display: block;
-  margin-bottom: $sm-pad;
-  padding: $sm-pad 0;
-  width: 100%;
 }
