Implement gallery, subscription blocks and footer

--- a/src/styles/blocks/current-events.scss
+++ b/src/styles/blocks/current-events.scss
@@ -11,4 +11,18 @@
       row-gap: 104px;
     }
   }
+
+  &__event {
+    @include onTablet {
+      &:nth-child(2) {
+        margin-bottom: 48px;
+      }
+    }
+
+    @include onDesktop {
+      &:nth-child(2) {
+        margin-bottom: 0;
+      }
+    }
+  }
 }
