--- a/src/styles/blocks/event.scss
+++ b/src/styles/blocks/event.scss
@@ -4,10 +4,6 @@
 
   @include onTablet {
     row-gap: 40px;
-
-    &:nth-child(2) {
-      margin-bottom: 48px;
-    }
   }
 
   &__image {
@@ -16,6 +12,8 @@
 
   &__image-exposition {
     grid-column: 1 / -1;
+
+    @include hover(transform, scale(1.05));
 
     @include onDesktop {
       grid-column: 1 / 8;
