--- a/src/styles/blocks/exhibitions.scss
+++ b/src/styles/blocks/exhibitions.scss
@@ -1,4 +1,4 @@
-.events-link {
+.exhibitions {
   display: none;
 
   font-family: IBM Plex Sans, sans-serif;
@@ -18,7 +18,6 @@
   }
 
   &__line {
-    height: 1px;
     width: 70px;
     margin-right: 20px;
 
