--- a/src/styles/blocks/header.scss
+++ b/src/styles/blocks/header.scss
@@ -1,8 +1,18 @@
 .header {
+  padding-bottom: 70px;
+
   font-family: Montserrat, sans-serif;
   font-size: 30px;
   font-weight: 700;
   text-align: center;
+
+  @include onTablet {
+    padding-bottom: 88px;
+  }
+
+  @include onDesktop {
+    padding-bottom: 200px;
+  }
 
   &__background {
     --container-paddings: -20px;
@@ -116,11 +126,11 @@
     }
 
     @include onDesktop {
-      grid-column: 3 / -1;
+      grid-column: 3 / 6;
     }
   }
 
-  &__events-link {
+  &__exhibitions {
     position: absolute;
     align-self: end;
   }
