--- a/src/styles/blocks/main.scss
+++ b/src/styles/blocks/main.scss
@@ -2,7 +2,19 @@
   &__content {
     display: grid;
     row-gap: 100px;
-    padding-top: 70px;
+    justify-content: center;
     padding-bottom: 50px;
+
+    @include onTablet {
+      row-gap: 88px;
+    }
+
+    @include onTablet {
+      row-gap: 200px;
+    }
+  }
+
+  &__subscription {
+    max-width: 1280px;
   }
 }
