--- a/src/styles/blocks/menu.scss
+++ b/src/styles/blocks/menu.scss
@@ -28,32 +28,32 @@
 
   &__nav {
     grid-column: 1 / -1;
-    padding-left: 52px;
+    margin-left: 52px;
 
     @include onTablet {
       grid-column: 1 / 4;
     }
 
     @include onDesktop {
-      grid-column: 1 / 7;
+      grid-column: 2 / 6;
     }
   }
 
   &__divider {
     grid-column: 1 / -1;
-    color: #ffffff80;
+    border-color: #ffffff80;
 
     @include onTablet {
       position: absolute;
-      grid-column: 3 / 3;
+      grid-column: 3 / 4;
       height: 145px;
 
-      transform: translateX(82px);
+      transform: translateX(70px);
     }
 
     @include onDesktop {
-      grid-column: 6 / 6;
-      transform: translateX(98px);
+      grid-column: 7 / 8;
+      transform: translateX(0);
     }
   }
 
@@ -65,7 +65,7 @@
     }
 
     @include onDesktop {
-      grid-column: 8 / 13;
+      grid-column: 8 / 12;
     }
   }
 
