--- a/src/styles/blocks/schedule.scss
+++ b/src/styles/blocks/schedule.scss
@@ -13,6 +13,20 @@
     @include onTablet {
       display: flex;
     }
+
+    @include onDesktop {
+      gap: 10px;
+    }
+
+    &--flex-direction--column {
+      flex-direction: column;
+    }
+
+    &--gap--zero {
+      @include onDesktop {
+        gap: 0;
+      }
+    }
   }
 
   &__list {
@@ -23,10 +37,18 @@
       margin-bottom: 0;
       margin-right: 38px;
     }
+
+    &--margin--zero {
+      margin: 0;
+    }
   }
 
   &__item {
     width: max-content;
+
+    &--width--auto {
+      width: auto;
+    }
   }
 
   &--text--bold {
