--- a/src/styles/blocks/tickets.scss
+++ b/src/styles/blocks/tickets.scss
@@ -1,18 +1,23 @@
 .tickets {
   display: flex;
+  height: 50px;
 
-  font-family: IBM Plex Sans, sans-serif;
-  font-size: 16px;
-  font-weight: 500;
-  line-height: 100%;
+  @include onTablet {
+    height: 70px;
+  }
 
   &__text {
-    place-self: center;
-    padding: 16.5px 82px;
+    padding-inline: 82px;
     border: 1px solid $secondary-color;
 
+    font-family: IBM Plex Sans, sans-serif;
+    font-size: 16px;
+    font-weight: 500;
+    line-height: 50px;
+
     @include onTablet {
-      padding: 26.5px 68px;
+      padding-inline: 68px;
+      line-height: 70px;
     }
   }
 
