--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -7,7 +7,7 @@
 
 @import "blocks/header";
 @import "blocks/tickets";
-@import "blocks/events-link";
+@import "blocks/exhibitions";
 
 @import "blocks/menu";
 @import "blocks/nav";
@@ -15,7 +15,16 @@
 
 @import "blocks/main";
 @import "blocks/section-title";
+
 @import "blocks/current-events";
 @import "blocks/event";
 @import "blocks/description";
 @import "blocks/description-lection";
+
+@import "blocks/gallery";
+
+@import "blocks/subscription";
+@import "blocks/field";
+
+@import "blocks/footer";
+@import "blocks/contacts";
