--- a/src/styles/blocks/nav.scss
+++ b/src/styles/blocks/nav.scss
@@ -11,16 +11,46 @@
 
   &__list {
     display: grid;
-    grid-template-columns: 1fr 1fr;
+    grid-template-columns: 100px 100px;
     column-gap: 28px;
     row-gap: 24px;
 
     list-style: none;
+
+    @include onTablet {
+      column-gap: 20px;
+    }
+
+    @include onDesktop {
+      grid-template-columns: 168px 168px;
+      column-gap: 30px;
+    }
+
+    &--template-columns--fr {
+      grid-template-columns: 1fr 1fr;
+    }
+
+    &--gaps--custom {
+      column-gap: 20px;
+      row-gap: 20px;
+
+      @include onTablet {
+        column-gap: 30px;
+      }
+
+      @include onDesktop {
+        column-gap: 90px;
+      }
+    }
   }
 
   &__link {
-    text-decoration: none;
 
+    text-decoration: none;
     color: #fff;
+
+    &--color--main {
+      color: $main-color;
+    }
   }
 }
