--- a/src/styles/blocks/section-title.scss
+++ b/src/styles/blocks/section-title.scss
@@ -1,5 +1,5 @@
 .section-title {
-  padding-bottom: 40px;
+  margin-bottom: 40px;
 
   font-family: Montserrat, sans-serif;
   font-size: 36px;
@@ -9,11 +9,11 @@
 
   @include onTablet {
     font-size: 48px;
-    padding-bottom: 48px;
+    margin-bottom: 48px;
     text-align: left;
   }
 
   @include onDesktop {
-    padding-bottom: 56px;
+    margin-bottom: 56px;
   }
 }
