--- a/src/styles/blocks/gallery.scss
+++ b/src/styles/blocks/gallery.scss
@@ -1,9 +1,30 @@
 .gallery {
   @include pageGrid;
   position: relative;
+  margin-top: 23em;
+  @media (min-width: 390px) {
+    margin-top: 20em;
+  }
+  @media (min-width: 450px) {
+    margin-top: 16em;
+  }
+  @media (min-width: 490px) {
+    margin-top: 13em;
+  }
+  @media (min-width: 540px) {
+    margin-top: 9em;
+  }
+  @media (min-width: 540px) {
+    margin-top: 5em;
+  }
+
+  @include onTablet {
+    margin-top: 0;
+  }
 
   @include onDesktop {
     row-gap: 30px;
+    margin-top: 700px;
   }
 
   &__ellipses {
