--- a/src/styles/blocks/header.scss
+++ b/src/styles/blocks/header.scss
@@ -44,6 +44,12 @@
       position: absolute;
       left: 50%;
     }
+
+    @include onDesktop {
+      width: 55%;
+      position: absolute;
+      left: 45%;
+    }
   }
 
   &__title {
@@ -52,7 +58,10 @@
 
 
   &__form {
-
+    @include onDesktop {
+      margin-left: 190px;
+      margin-top: 89px;
+    }
     &-input {
       padding: 0;
       margin: 0;
