added filling of the page

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -11,3 +11,10 @@
 @import "blocks/event.scss";
 @import "blocks/exhibition.scss";
 @import "blocks/lecture.scss";
+@import "blocks/gallery.scss";
+@import "blocks/subscription.scss";
+@import "blocks/footer.scss";
+@import "blocks/contacts.scss";
+@import "blocks/icons.scss";
+@import "blocks/links.scss";
+@import "blocks/schedule.scss";
