--- a/src/styles/blocks/event.scss
+++ b/src/styles/blocks/event.scss
@@ -1,8 +1,12 @@
 .event {
   font-family: 'IBM Plex Sans', sans-serif;
-  
+
   &__exhibition {
     @include constentPaddinInline;
     @include pageGrid;
+  }
+
+  &__lecture {
+    position: relative;
   }
 }
